<resources>
    <string name="app_name">PhotonRemoteControl</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="up">UP</string>
    <string name="down">DOWN</string>
    <string name="stop">STOP</string>
    <string name="left">LEEFT</string>
    <string name="right">RIGHT</string>
    <string name="device">ss</string>
    <string name="token">ss</string>
    <string name="registred_devices">Registered Devices</string>
    <string name="new_device">New Device</string>
    <string name="device_label">Device:</string>
    <string name="created_label">Created:</string>
    <string name="last_online_label">Online Date:</string>
</resources>
